# kd-random-coffee

./: .dockerignore  .env  .pre-commit-config.yaml  app.py  justfile  pyproject.toml  tasks.md
kd_random_coffee_utils/: types.py
random_coffee_be/: __main__.py  config.py  depends.py  docker-compose.yml  main.py  models?.py  offcet-native.py  osscet_native(created).py  set.env  settings.py
random_coffee_be/integrations/: _mocks.py  clubs_repo.py  participation_repo.py  users_repo.py
random_coffee_be/models/: club.py  user.py  user_clubs.py  user_manager.py
random_coffee_be/random_coffee_be/: __main__.py  config.py  docker-compose.yml  main.py  set.env
random_coffee_be/random_coffee_be/integrations/: users_repo.py
random_coffee_be/random_coffee_be/models/: club.py  user_manager.py
random_coffee_be/random_coffee_be/services/: clubs_service.py  user_club_service.py  users_service.py
random_coffee_be/random_coffee_be/transports/: external_api.py
random_coffee_be/random_coffee_be/transports/views/: __init__.py
random_coffee_be/repositories/: club_repository.py  user_club_repository.py  user_repository.py
random_coffee_be/services/: club_groups.py  clubs_service.py  user_club_service.py  users_service.py
random_coffee_be/transports/: external_api.py
random_coffee_be/views/: __init__.py  users_views.py
random_coffee_fe/: __main__.py  bot.py  config.py
random_coffee_fe/intagrations/: telegram.py
random_coffee_fe/models/: user.py  user_manager.py
random_coffee_fe/services/: user_service.py
random_coffee_fe/transports/: handlers.py
(+11 files in other folders)
